--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </div>
   
   <div id="buttons">
-    <a class="button" href="https://www.youtube.com/@taylor360">
+    <a class="button" href="https://www.youtube.com/@txylor360">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/2560px-YouTube_full-color_icon_%282017%29.svg.png" alt="YouTube Logo">
       <span>YouTube</span>
     </a>
