--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
       max-height: 20px;
       max-width: 20px;
     }
+
+    #video-container {
+      width: 640px; /* Width of the buttons plus gaps */
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    #video {
+      max-width: 100%;
+      height: auto;
+    }
   </style>
 </head>
 <body>
@@ -92,6 +103,13 @@
       <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6a49cf127bf92de1e2_icon_clyde_blurple_RGB.png" alt="Discord Logo">
       <span>Discord</span>
     </a>
+  </div>
+
+  <div id="video-container">
+    <video id="video" controls autoplay loop>
+      <source src="https://cdn.discordapp.com/attachments/982440671505965068/1142066846640652388/Computer_Chip_Walking_To_Stayin_Alive_Synced_to_Music_720p.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
 </body>
 </html>
