--- a/index.html
+++ b/index.html
@@ -111,5 +111,9 @@
       Your browser does not support the video tag.
     </video>
   </div>
+
+  <div id="header">
+    <p>I will be pushing out some changes in the near future for mobile but for right now I am prioritising the desktop site. Thanks.</p>
+  </div>
 </body>
 </html>
