--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Taylor360</title>
   <style>
+    /* Desktop styles */
     body {
       margin: 0;
       padding: 0;
@@ -82,6 +83,34 @@
     #video {
       max-width: 100%;
       height: auto;
+    }
+
+    #header p {
+      font-size: 14px; /* Smaller font size for mobile */
+    }
+
+    /* Mobile styles */
+    @media (max-width: 600px) {
+      body {
+        background-size: contain;
+      }
+      
+      #header h1 {
+        font-size: 24px;
+      }
+
+      #buttons {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .button {
+        width: 100%;
+      }
+
+      #video-container {
+        width: 100%;
+      }
     }
   </style>
 </head>
