--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
       #video-container {
         width: 100%;
       }
+
+      #background-tint {
+        background-color: rgba(0, 0, 0, 0.8);
+      }
     }
   </style>
 </head>
