Update the BG to use imgur for faster downloads

--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
   body {
     margin: 0;
     padding: 0;
-    background-image: url('img/bg_main.png');
+    background-image: url('https://imgur.com/6kpvlca');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
