--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
   body {
     margin: 0;
     padding: 0;
-    background-image: url('https://imgur.com/6kpvlca');
+    background-image: url('https://i.imgur.com/6kpvlca.png');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
