Update news.html with new patch notes

--- a/news.html
+++ b/news.html
@@ -50,6 +50,20 @@
             </div>
             <br>
             <div id="posts">
+              <h3><a href='#'>Version 16 Released now! lalalala</a></h3>
+              <p>Version 16 is now fully available to use</p>
+              <p>Changelog:</p>
+              <ul>
+                <p>* This is an updated feature</p>
+                <p>* This is an updated feature</p>
+                <p>* This is an updated feature</p>
+                <p>* This is an updated feature</p>
+                <p>* This is an updated feature</p>
+                <p>* This is an updated feature</p>
+              </ul>
+            </div>
+            <br>
+            <div id="posts">
               <h3><a href="#">Version 15 Full Release!</a></h3>
               <p>Version 15 is now fully available and free to play!</p>
               <p>Changelog:</p>
