--- a/news.html
+++ b/news.html
@@ -21,10 +21,22 @@
       0%, 100% {
           background-image: url('https://i.imgur.com/6kpvlca.png');
       }
-      50% {
+      16% {
           background-image: url('https://i.ibb.co/GHrhZPN/CENEWSBG2.png');
       }
-  }
+      32% {
+          background-image: url('https://i.ibb.co/mzZKb1P/CENEWSBG3.png');
+      }
+      48% {
+          background-image: url('https://i.ibb.co/0hjH2NB/CENEWSBG4.png');
+      }
+      64% {
+          background-image: url('https://i.ibb.co/3cdMwqn/CENEWSBG5.png');
+      }
+      80% {
+          background-image: url('https://i.ibb.co/7RZLjvK/CENEWSBG6.png');
+      }
+    }
 </style>
 <body>
   <table width="100%" height="100%">
