--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       background-size: cover;
-      background-position: center;
+      background-position: top;
       background-attachment: fixed;
       background-repeat: no-repeat;
       animation: crossfade 15s infinite;
