--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
       background-position: top;
       background-attachment: fixed;
       background-repeat: no-repeat;
-      animation: crossfade 15s infinite;
+      animation: crossfade 100s infinite;
   }
 
   @keyframes crossfade {
@@ -39,6 +39,15 @@
     }
 </style>
 <body>
+  <!-- Preloading Images -->
+  <img src="https://i.imgur.com/6kpvlca.png" alt="" style="display: none;">
+  <img src="https://i.ibb.co/GHrhZPN/CENEWSBG2.png" alt="" style="display: none;">
+  <img src="https://i.ibb.co/mzZKb1P/CENEWSBG3.png" alt="" style="display: none;">
+  <img src="https://i.ibb.co/0hjH2NB/CENEWSBG4.png" alt="" style="display: none;">
+  <img src="https://i.ibb.co/3cdMwqn/CENEWSBG5.png" alt="" style="display: none;">
+  <img src="https://i.ibb.co/7RZLjvK/CENEWSBG6.png" alt="" style="display: none;">
+
+  
   <table width="100%" height="100%">
     <tbody>
       <tr valign="top">
