--- a/news.html
+++ b/news.html
@@ -99,7 +99,7 @@
           <h2>Community links:</h2>
           <a href="https://discord.gg/the-ultimate-friday-1062480837473488926">Ultimate Friday Discord</a><br>
           <h2>Download:</h2>
-          <a href="https://cdn.f13mods.org/ce/latest"><img src="img/CE_LOGO_V15.png" border="0" style="width: 144px;"></a>
+          <a href="https://cdn.f13mods.org/ce/latest"><img src="https://i.ibb.co/YhP8QdJ/CE-DOWNLOAD.png" border="0" style="width: 144px;"></a>
         </td>
       </tr>
     </tbody>
