--- a/news.html
+++ b/news.html
@@ -56,7 +56,7 @@
             <tbody>
               <tr>
                 <td>
-                  <h1>Complete Edition - v15</h1>
+                  <div class="logo"></div>
                 </td>
               </tr>
             </tbody>
@@ -98,7 +98,7 @@
           <a href="https://www.youtube.com/channel/UC0V-WwCXJbvbtEfqAFtWEsw">YouTube</a><br>
           <h2>Community links:</h2>
           <a href="https://discord.gg/the-ultimate-friday-1062480837473488926">Ultimate Friday Discord</a><br>
-          <h2>Download:</h2>
+          <h2>Get Complete Edition:</h2>
           <a href="https://cdn.f13mods.org/ce/latest"><img src="https://i.ibb.co/YhP8QdJ/CE-DOWNLOAD.png" border="0" style="width: 144px;"></a>
         </td>
       </tr>
