--- a/news.html
+++ b/news.html
@@ -98,7 +98,7 @@
           <a href="https://www.youtube.com/channel/UC0V-WwCXJbvbtEfqAFtWEsw" target="_blank">YouTube</a><br>
           <h2>Community links:</h2>
           <a href="https://discord.gg/the-ultimate-friday-1062480837473488926" target="_blank">Ultimate Friday Discord</a><br>
-          <h2>Get Complete Edition:</h2>
+          <h2>Get The Complete Edition:</h2>
           <a href="https://cdn.f13mods.org/ce/latest" target="_blank"><img src="https://i.ibb.co/YhP8QdJ/CE-DOWNLOAD.png" border="0" style="width: 144px;"></a>
         </td>        
       </tr>
