--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
                 <li>The Finished Launcher</li>
               </ul>
               <p>We’ll keep you posted.<br />- The Complete Team</p>
-              <p>Check out <a href="https://discord.gg/complete-edition">the discord</a>!</p>                  
+              <p>Check out <a href="https://discord.gg/complete-edition" target="_blank">the discord</a>!</p>                  
             </div>
             <hr>
             <div id="posts">
