--- a/news.html
+++ b/news.html
@@ -80,11 +80,11 @@
             </div>
             <hr>
             <div id="posts">
-              <h3><a href="#">Version 15 Full Release!</a></h3>
-              <p>Version 15 is now fully available and free to play!</p>
+              <h3><a href="#">Launcher Beta Release v0.9.8</a></h3>
+              <p>Hello everyone, if you are reading this you are one of the people who downloaded the new Launcher Beta Release from the discord, and for that I welcome you, I will be updating this launcher a lot over the course of the next few days</p>
               <p>Changelog:</p>
               <ul>
-                <p>* Added Something to do with grendal</p>
+                <p>* Fixed Alerts<br>* Added Discord RPC<br>* Added Auto Updating (Launcher)<br>* Fixed Links Not Working<br>* Optimised Asset Loading</p>
               </ul>
             </div>
             <hr>
