--- a/news.html
+++ b/news.html
@@ -80,6 +80,15 @@
             </div>
             <hr>
             <div id="posts">
+              <h3><a href="#">Launcher Full Release v1.0.0</a></h3>
+              <p>Hey everyone!<br><br>We have finished work on the main launcher for now, and by finished I mean get it in a fully working state. More updates will obviously come out very often, but for now we are happy with where it is at. More API changes will follow obviously very soon allowing you to see much more information regarding the build.</p>
+              <p>Changelog:</p>
+              <ul>
+                <p>* Removed Unused Stats Menu (Temporarily)</p>
+              </ul>
+            </div>
+            <hr>
+            <div id="posts">
               <h3><a href="#">Launcher Beta Release v0.9.8</a></h3>
               <p>Hello everyone, if you are reading this you are one of the people who downloaded the new Launcher Beta Release from the discord, and for that I welcome you, I will be updating this launcher a lot over the course of the next few days</p>
               <p>Changelog:</p>
