News Post for v1.1.0

--- a/news.html
+++ b/news.html
@@ -80,7 +80,16 @@
             </div>
             <hr>
             <div id="posts">
-              <h3><a href="#">Launcher Full Release v1.0.0</a></h3>
+              <h3><a href="#">Launcher Full Release v1.1.0 - 19/03/24</a></h3>
+              <p>Hey everyone! Nice to give you guys an update already so soon! We have fixed a lot of bugs, some that are unrelated, and some that help you guys out with compatibility (see the changelog below) and also added a brand new tab, you can probably see above this message. Just to clear up with the recent controversy, we will probably make a post here soon regarding it. But in my words (taylor) fuck Sia and Gotico :).</p>
+              <p>Changelog:</p>
+              <ul>
+                <p>* Added the new Players menu.<br>* Fixed a bug where multiple instances of the launcher could be opened.<br>* Added some more API endpoints to deal with the player list.<br>* Fixed a bug where killing the updater during an update would break it and not allow it to update again.<br>* Optimised and lowered the sizes of some key assets.</p>
+              </ul>
+            </div>
+            <hr>
+            <div id="posts">
+              <h3><a href="#">Launcher Full Release v1.0.0 - 18/03/24</a></h3>
               <p>Hey everyone!<br><br>We have finished work on the main launcher for now, and by finished I mean get it in a fully working state. More updates will obviously come out very often, but for now we are happy with where it is at. More API changes will follow obviously very soon allowing you to see much more information regarding the build.</p>
               <p>Changelog:</p>
               <ul>
