Updated news to v.1.1.1

--- a/news.html
+++ b/news.html
@@ -80,6 +80,15 @@
             </div>
             <hr>
             <div id="posts">
+              <h3><a href="#">Launcher Full Release v1.1.1 - 19/03/24</a></h3>
+              <p>Hey again! We have resolved the issue not allowing people to run the launcher at all. Thanks!</p>
+              <p>Changelog:</p>
+              <ul>
+                <p>* Removed Double Instance Checking (Caused issues with the SteamAPI)</p>
+              </ul>
+            </div>
+            <hr>
+            <div id="posts">
               <h3><a href="#">Launcher Full Release v1.1.0 - 19/03/24</a></h3>
               <p>Hey everyone! Nice to give you guys an update already so soon! We have fixed a lot of bugs, some that are unrelated, and some that help you guys out with compatibility (see the changelog below) and also added a brand new tab, you can probably see above this message. Just to clear up with the recent controversy, we will probably make a post here soon regarding it. But in my words (taylor) fuck Sia and Gotico :).</p>
               <p>Changelog:</p>
