--- a/news.html
+++ b/news.html
@@ -80,6 +80,15 @@
             </div>
             <hr>
             <div id="posts">
+              <h3><a href="#">Launcher Release v1.1.2 - 20/03/24</a></h3>
+              <p>Hello all, I know there are a lot of updates coming out daily, which is good, but dont worry we make sure they are of quality, so here are the changes for today!</p>
+              <p>Changelog:</p>
+              <ul>
+                <p>* Readded Double Instance Checking (Should reduce random task manager load)<br>* Updated UI (Courtesy of venquis' design)<br>* Added some new API endpoints for the new UI changes></p>
+              </ul>
+            </div>
+            <hr>
+            <div id="posts">
               <h3><a href="#">Launcher Full Release v1.1.1 - 19/03/24</a></h3>
               <p>Hey again! We have resolved the issue not allowing people to run the launcher at all. Thanks!</p>
               <p>Changelog:</p>
