--- a/news.html
+++ b/news.html
@@ -84,7 +84,7 @@
               <p>Hello all, I know there are a lot of updates coming out daily, which is good, but dont worry we make sure they are of quality, so here are the changes for today!</p>
               <p>Changelog:</p>
               <ul>
-                <p>* Readded Double Instance Checking (Should reduce random task manager load)<br>* Updated UI (Courtesy of venquis' design)<br>* Added some new API endpoints for the new UI changes></p>
+                <p>* Readded Double Instance Checking (Should reduce random task manager load)<br>* Updated UI (Courtesy of venquis' design)<br>* Added some new API endpoints for the new UI changes<br>* Added rezisable windows to the launcher</p>
               </ul>
             </div>
             <hr>
