--- a/news.html
+++ b/news.html
@@ -63,20 +63,32 @@
           </table>
           <div class="container">
             <div id="posts">
-              <h3><a href="#">Welcome to Complete Edition v15</a></h3>
-              <p>Introducing our newest creation! - The official launcher for Complete Edition v15 (and later).</p>
+              <h3><a href="#">Welcome to Complete Edition v14</a></h3>
+              <p>Introducing our newest creation! - The official launcher for Complete Edition v14 (and later).</p>
               <p>Current Features Include:</p>
               <ul>
                 <li>Game Launching</li>
                 <li>Update Checking</li>
+                <li>Chat Room</li>
+                <li>Player List</li>
+                <li>Settings</li>
+                <li>More!</li>
               </ul>
               <p>Planned features include:</p>
               <ul>
-                <li>Steam Account Connection</li>
-                <li>The Finished Launcher</li>
+                <li>Stats Checking</li>
               </ul>
               <p>We’ll keep you posted.<br />- The Complete Team</p>
               <p>Check out <a href="https://discord.gg/complete-edition" target="_blank">the discord</a>!</p>                  
+            </div>
+            <hr>
+            <div id="posts">
+              <h3><a href="#">Launcher Release v1.2.1 - 20/03/24</a></h3>
+              <p>Hey everyone, new feature update, here are the changes I have made for this version!</p>
+              <p>Changelog:</p>
+              <ul>
+                <p>* Added a new chat tab with a fully featured chat room<br>* Added some new API endpoints.<br>* Various bug fixes</p>
+              </ul>
             </div>
             <hr>
             <div id="posts">
