--- a/news.html
+++ b/news.html
@@ -83,6 +83,15 @@
             </div>
             <hr>
             <div id="posts">
+              <h3><a href="#">Launcher Release v1.2.2 - 28/03/24</a></h3>
+              <p>Hey everyone, small patch here, changelogs below as always!</p>
+              <p>Changelog:</p>
+              <ul>
+                <p>* Added a controller mode feature<br>* Various bug fixes</p>
+              </ul>
+            </div>
+            <hr>
+            <div id="posts">
               <h3><a href="#">Launcher Release v1.2.1 - 20/03/24</a></h3>
               <p>Hey everyone, new feature update, here are the changes I have made for this version!</p>
               <p>Changelog:</p>
