--- a/news.html
+++ b/news.html
@@ -156,7 +156,7 @@
           <h2>Community links:</h2>
           <a href="https://discord.gg/the-ultimate-friday-1062480837473488926" target="_blank">Ultimate Friday Discord</a><br>
           <h2>Get Complete Edition:</h2>
-          <a href="https://cdn.f13mods.org/ce/latest" target="_blank"><img src="https://i.ibb.co/YhP8QdJ/CE-DOWNLOAD.png" border="0" style="width: 144px;"></a>
+          <a href="https://www.moddb.com/addons/start/267887?referer=https%3A%2F%2Fwww.moddb.com%2F" target="_blank"><img src="https://i.ibb.co/YhP8QdJ/CE-DOWNLOAD.png" border="0" style="width: 144px;"></a>
         </td>        
       </tr>
     </tbody>
